--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
-nimcache
-nimcache/*
-tests/test_bloom
-nim-bloom/bloom
 .DS_Store
-src/.DS_Store
+tests/test_reliability
+tests/bloom
 nph
+docs
+for_reference
+do_not_commit
+build/*
+sds.nims
+/.update.timestamp
+
+# Nimbus Build System
+nimbus-build-system.paths
+
+# Nimble packages
+/vendor/.nimble
