feat: refactor to support building with Nimble
Changes include:

- Removing all submodules from vendor folder.
- Updating sds.nimble with required depndencies.
- Generating a nimble.lock file using Nimble.
- Updated Nim code to reference depndencies correctly.
- Added nix/deps.nix fixed output derivation that calls Nimble.
- Updated nixpkgs to use 25.11 commit which provides Nimbe 0.20.1.
- Disabled Nix Android builds on MacOS due to Nimble segfault.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/.github/workflows/ci-nix.yml
+++ b/.github/workflows/ci-nix.yml
@@ -29,6 +29,17 @@ jobs:
           - system: x86_64-linux
             runs_on: [self-hosted, Linux, X64]
 
+        # Nimble segfaults on MacOS hosts.
+        exclude:
+          - system: aarch64-darwin
+            nixpkg: libsds-android-arm64
+          - system: aarch64-darwin
+            nixpkg: libsds-android-amd64
+          - system: aarch64-darwin
+            nixpkg: libsds-android-x86
+          - system: aarch64-darwin
+            nixpkg: libsds-android-arm
+
     name: '${{ matrix.system }} / ${{ matrix.nixpkg }}'
     runs-on: ${{ matrix.runs_on }}
     steps:
@@ -39,7 +50,7 @@ jobs:
       - name: 'Run Nix build for ${{ matrix.nixpkg }}'
         shell: bash
         run: |
-          nix build -L '.?submodules=1#${{ matrix.nixpkg }}' \
+          nix build -L '.#${{ matrix.nixpkg }}' \
             --print-out-paths --accept-flake-config
 
       - name: 'Show result contents'
