--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ result
 sds.nims
 /.update.timestamp
 
-# Nimbus Build System
-nimbus-build-system.paths
-
 # Nimble packages
 /vendor/.nimble
+nimble.develop
+nimble.paths
+nimbledeps
